// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container [Search] - sagas getResults Saga should dispatch searchComplete action result fetched successfully 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      400,
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`Container [Search] - sagas getResults Saga should dispatch searchComplete action result fetched successfully 2`] = `
Object {
  "@@redux-saga/IO": true,
  "SELECT": Object {
    "args": Array [],
    "selector": [Function],
  },
}
`;

exports[`Container [Search] - sagas getResults Saga should dispatch searchComplete action result fetched successfully 3`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "chocolate",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`Container [Search] - sagas getResults Saga should dispatch searchComplete action with empty results for profiler mode 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      400,
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`Container [Search] - sagas getResults Saga should dispatch searchComplete action with empty results for profiler mode 2`] = `
Object {
  "@@redux-saga/IO": true,
  "SELECT": Object {
    "args": Array [],
    "selector": [Function],
  },
}
`;

exports[`Container [Search] - sagas getResults Saga should dispatch searchFailure after failure to fetch 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      400,
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`Container [Search] - sagas getResults Saga should dispatch searchFailure after failure to fetch 2`] = `
Object {
  "@@redux-saga/IO": true,
  "SELECT": Object {
    "args": Array [],
    "selector": [Function],
  },
}
`;

exports[`Container [Search] - sagas getResults Saga should dispatch searchFailure after failure to fetch 3`] = `
Object {
  "@@redux-saga/IO": true,
  "SELECT": Object {
    "args": Array [],
    "selector": [Function],
  },
}
`;

exports[`Container [Search] - sagas getResults Saga should dispatch searchFailure after failure to fetch 4`] = `
Object {
  "@@redux-saga/IO": true,
  "PUT": Object {
    "action": Object {
      "error": [Error: Fetch Failure],
      "type": "app/Search/SEARCH_FAILURE",
    },
    "channel": null,
  },
}
`;
